# sqla-fancy-core

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
sqla_fancy_core/: __init__.py  builders.py  decorators.py  errors.py  factories.py  wrappers.py
tests/: docker-compose.yaml  test_async_atomic.py  test_async_fancy_engine.py  test_async_non_atomic.py  test_atomic.py  test_connect.py  test_decorators.py  test_errors.py  test_fancy_engine.py  test_field.py  test_non_atomic.py  test_table_builder.py  test_table_builder_async.py  test_table_factory.py  test_table_factory_async.py  test_transact.py
