[project]
name = 'sqla-fancy-core'
version = '0.3.0'
description = 'SQLAlchemy core, but fancier'
readme = 'README.md'
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["sql", "sqlalchemy", "sqlalchemy-core"]
authors = [
  {name = "Arijit Basu", email = "sayanarijit@gmail.com" }
]
maintainers = [
  {name = "Arijit Basu", email = "sayanarijit@gmail.com" }
]
classifiers = [  # Optional
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",


  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = ["sqlalchemy"]

[project.optional-dependencies]
test = ["pytest", "flake8"]

[project.urls]
"Homepage" = "https://github.com/sayanarijit/sqla-fancy-core"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
