[project]
name = 'sqla-fancy-core'
version = '1.1.1'
description = 'SQLAlchemy core, but fancier'
readme = 'README.md'
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = ["sql", "sqlalchemy", "sqlalchemy-core"]
authors = [{ name = "Arijit Basu", email = "sayanarijit@gmail.com" }]
maintainers = [{ name = "Arijit Basu", email = "sayanarijit@gmail.com" }]
classifiers = [
  # Indicate who your project is intended for
  "Intended Audience :: Developers",


  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",
]

dependencies = ["sqlalchemy"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "flake8",
  "pydantic",
  "sqlalchemy[asyncio]",
  "aiosqlite",
  "fastapi",
  "httpx",
  "python-multipart",
]
dev = ["hatchling", "twine", "build", "ipython"]

[project.urls]
"Homepage" = "https://github.com/sayanarijit/sqla-fancy-core"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
