[project]
name = 'sqla-fancy-core'
version = '2.0.0'
description = 'A collection of type-safe, async friendly, and un-opinionated enhancements to SQLAlchemy Core that works well with mordern web servers.'
readme = 'README.md'
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = [
  "sql",
  "sqlalchemy",
  "database",
  "async",
  "type-safe",
  "orm",
  "web",
  "fastapi",
]
authors = [{ name = "Arijit Basu", email = "sayanarijit@gmail.com" }]
maintainers = [{ name = "Arijit Basu", email = "sayanarijit@gmail.com" }]
classifiers = [
  # Indicate who your project is intended for
  "Intended Audience :: Developers",


  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",
]

dependencies = ["sqlalchemy>=2.0.0,<3.0.0"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "flake8",
  "pydantic",
  "sqlalchemy[asyncio]",
  "aiosqlite",
  "fastapi",
  "httpx",
  "python-multipart",
]
dev = ["hatchling", "twine", "build", "ipython"]

[project.urls]
"Homepage" = "https://github.com/sayanarijit/sqla-fancy-core"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
